fix: horizontal scroll

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -403,6 +403,9 @@
       height: 1rem;
     }
   }
+  .#{$prefix}--switcher__item--divider {
+    width: calc(100% - 2rem);
+  }
 }
 
 .#{$prefix}--bmrg-header-teams__loading {
